@@ -2,6 +2,16 @@
 
         Reviewed by Yury Semikhatsky.
 
+        Web Inspector: expose object class name as a part of RemoteObject mirror.
+        https://bugs.webkit.org/show_bug.cgi?id=61067
+
+        * inspector/InjectedScriptSource.js:
+        * inspector/Inspector.json:
+
+2011-05-19  Pavel Feldman  <pfeldman@google.com>
+
+        Reviewed by Yury Semikhatsky.
+
         Web Inspector: make "this" a part of callFrame, not scope in the protocol.
         https://bugs.webkit.org/show_bug.cgi?id=61057
 
